// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enroll-profile-with-password should add new field to view and remove it from the payload before submission 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <main
      class="MuiBox-root emotion-1"
      data-commit="b9bbc0140703c3fbf0e2e58920362e70"
      data-se="auth-container main-container"
      data-version="0.0.0"
      dir="ltr"
      id="okta-sign-in"
      lang="en"
    >
      <div
        class="MuiScopedCssBaseline-root emotion-2"
      >
        <div
          class="MuiBox-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
              data-se="okta-sign-in-header auth-header "
            >
              <h1
                class="MuiTypography-root MuiTypography-h1 emotion-6"
                tabindex="-1"
              />
            </div>
            <div
              class="MuiBox-root emotion-7"
            >
              <form
                aria-live="polite"
                class="o-form MuiBox-root emotion-8"
                data-se="o-form"
                novalidate=""
              >
                <div
                  class="MuiBox-root emotion-9"
                >
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <h2
                        class="MuiTypography-root MuiTypography-h4 emotion-12"
                        data-se="o-form-head"
                        tabindex="-1"
                      >
                        Sign up
                      </h2>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 emotion-15"
                        data-se="o-form-explain"
                        tabindex="-1"
                      >
                        Fields are required unless marked optional.
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-17"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-18"
                        data-shrink="false"
                        for="userProfile.lastName"
                        id="userProfile.lastName-label"
                      >
                        <span>
                          Last name
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-19"
                        required="true"
                      >
                        <input
                          aria-invalid="false"
                          aria-labelledby="userProfile.lastName-label"
                          autocomplete="family-name"
                          class="MuiInputBase-input emotion-20"
                          data-se="userProfile.lastName"
                          id="userProfile.lastName"
                          name="userProfile.lastName"
                          required=""
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-17"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-18"
                        data-shrink="false"
                        for="userProfile.firstName"
                        id="userProfile.firstName-label"
                      >
                        <span>
                          First name
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-19"
                        required="true"
                      >
                        <input
                          aria-invalid="false"
                          aria-labelledby="userProfile.firstName-label"
                          autocomplete="given-name"
                          class="MuiInputBase-input emotion-20"
                          data-se="userProfile.firstName"
                          id="userProfile.firstName"
                          name="userProfile.firstName"
                          required=""
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-17"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-18"
                        data-shrink="false"
                        for="userProfile.email"
                        id="userProfile.email-label"
                      >
                        <span>
                          Email
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-19"
                        required="true"
                      >
                        <input
                          aria-invalid="false"
                          aria-labelledby="userProfile.email-label"
                          autocomplete="email"
                          class="MuiInputBase-input emotion-20"
                          data-se="userProfile.email"
                          id="userProfile.email"
                          inputmode="email"
                          name="userProfile.email"
                          required=""
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-17"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-18"
                        data-shrink="false"
                        for="userProfile.login"
                        id="userProfile.login-label"
                      >
                        <span>
                          Username
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-19"
                        required="true"
                      >
                        <input
                          aria-invalid="false"
                          aria-labelledby="userProfile.login-label"
                          class="MuiInputBase-input emotion-20"
                          data-se="userProfile.login"
                          id="userProfile.login"
                          name="userProfile.login"
                          required=""
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-17"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-18"
                        data-shrink="false"
                        for="userProfile.address"
                        id="userProfile.address-label"
                      >
                        <span>
                          Street Address
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-19"
                        required="true"
                      >
                        <input
                          aria-invalid="false"
                          aria-labelledby="userProfile.address-label"
                          class="MuiInputBase-input emotion-20"
                          data-se="userProfile.address"
                          id="userProfile.address"
                          name="userProfile.address"
                          required=""
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-42"
                      data-se="save"
                      tabindex="0"
                      type="submit"
                    >
                      Sign Up
                    </button>
                  </div>
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <hr
                      class="MuiDivider-root MuiDivider-fullWidth emotion-44"
                      data-se="separation-line"
                    />
                  </div>
                  <div
                    class="MuiBox-root emotion-45"
                  >
                    <div
                      class="MuiBox-root emotion-46"
                    >
                      <div
                        class="MuiBox-root emotion-11"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 emotion-15"
                          data-se="haveaccount"
                          tabindex="-1"
                        >
                          Already have an account?
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-46"
                    >
                      <button
                        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-50"
                        data-se="back"
                        role="link"
                        type="button"
                      >
                        Sign In
                      </button>
                    </div>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`enroll-profile-with-password should show custom error message and prevent submission when failure is triggered in preSubmit callback 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <main
      class="MuiBox-root emotion-1"
      data-commit="b9bbc0140703c3fbf0e2e58920362e70"
      data-se="auth-container main-container"
      data-version="0.0.0"
      dir="ltr"
      id="okta-sign-in"
      lang="en"
    >
      <div
        class="MuiScopedCssBaseline-root emotion-2"
      >
        <div
          class="MuiBox-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
              data-se="okta-sign-in-header auth-header "
            >
              <h1
                class="MuiTypography-root MuiTypography-h1 emotion-6"
                tabindex="-1"
              />
            </div>
            <div
              class="MuiBox-root emotion-7"
            >
              <form
                aria-live="polite"
                class="o-form MuiBox-root emotion-8"
                data-se="o-form"
                novalidate=""
              >
                <div
                  class="MuiBox-root emotion-9"
                >
                  <div
                    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-calloutError MuiAlert-callout emotion-10"
                    role="alert"
                  >
                    <div
                      class="MuiAlert-icon emotion-11"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-12"
                        fill="none"
                        focusable="false"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M9.879 1.707a3 3 0 0 1 4.242 0l8.172 8.172a3 3 0 0 1 0 4.242l-8.172 8.172a3 3 0 0 1-4.242 0L1.707 14.12a3 3 0 0 1 0-4.242L9.88 1.707ZM12 13a1 1 0 0 1-1-1V7h2v5a1 1 0 0 1-1 1Zm0 1.75a1.25 1.25 0 1 0 0 2.5 1.25 1.25 0 0 0 0-2.5Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiAlert-message emotion-13"
                    >
                      <span
                        class="MuiBox-root emotion-14"
                        translate="no"
                      >
                        error
                      </span>
                      <div
                        class="MuiBox-root emotion-1"
                      >
                        This is my custom global message
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-16"
                >
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <h2
                        class="MuiTypography-root MuiTypography-h4 emotion-19"
                        data-se="o-form-head"
                        tabindex="-1"
                      >
                        Sign up
                      </h2>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 emotion-22"
                        data-se="o-form-explain"
                        tabindex="-1"
                      >
                        Fields are required unless marked optional.
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-24"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-error MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-25"
                        data-shrink="false"
                        for="userProfile.lastName"
                        id="userProfile.lastName-label"
                      >
                        <span>
                          Last name
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-formControl emotion-26"
                        required="true"
                      >
                        <input
                          aria-describedby="userProfile.lastName-error"
                          aria-errormessage="userProfile.lastName-error"
                          aria-invalid="true"
                          aria-labelledby="userProfile.lastName-label"
                          autocomplete="family-name"
                          class="MuiInputBase-input emotion-27"
                          data-se="userProfile.lastName"
                          id="userProfile.lastName"
                          name="userProfile.lastName"
                          required=""
                          type="text"
                        />
                      </div>
                      <p
                        class="MuiFormHelperText-root Mui-error MuiFormHelperText-sizeMedium MuiFormHelperText-filled emotion-28"
                        id="userProfile.lastName-error"
                      >
                        <span
                          class="MuiBox-root emotion-14"
                        >
                          Error:
                        </span>
                        <div
                          class="MuiBox-root emotion-1"
                        >
                          Custom preSubmit error
                        </div>
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-24"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-25"
                        data-shrink="false"
                        for="userProfile.firstName"
                        id="userProfile.firstName-label"
                      >
                        <span>
                          First name
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-26"
                        required="true"
                      >
                        <input
                          aria-invalid="false"
                          aria-labelledby="userProfile.firstName-label"
                          autocomplete="given-name"
                          class="MuiInputBase-input emotion-27"
                          data-se="userProfile.firstName"
                          id="userProfile.firstName"
                          name="userProfile.firstName"
                          required=""
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-24"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-25"
                        data-shrink="false"
                        for="userProfile.email"
                        id="userProfile.email-label"
                      >
                        <span>
                          Email
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-26"
                        required="true"
                      >
                        <input
                          aria-invalid="false"
                          aria-labelledby="userProfile.email-label"
                          autocomplete="email"
                          class="MuiInputBase-input emotion-27"
                          data-se="userProfile.email"
                          id="userProfile.email"
                          inputmode="email"
                          name="userProfile.email"
                          required=""
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-24"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-25"
                        data-shrink="false"
                        for="userProfile.login"
                        id="userProfile.login-label"
                      >
                        <span>
                          Username
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-26"
                        required="true"
                      >
                        <input
                          aria-invalid="false"
                          aria-labelledby="userProfile.login-label"
                          class="MuiInputBase-input emotion-27"
                          data-se="userProfile.login"
                          id="userProfile.login"
                          name="userProfile.login"
                          required=""
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-47"
                      data-se="save"
                      tabindex="0"
                      type="submit"
                    >
                      Sign Up
                    </button>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <hr
                      class="MuiDivider-root MuiDivider-fullWidth emotion-49"
                      data-se="separation-line"
                    />
                  </div>
                  <div
                    class="MuiBox-root emotion-50"
                  >
                    <div
                      class="MuiBox-root emotion-51"
                    >
                      <div
                        class="MuiBox-root emotion-18"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 emotion-22"
                          data-se="haveaccount"
                          tabindex="-1"
                        >
                          Already have an account?
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-51"
                    >
                      <button
                        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-55"
                        data-se="back"
                        role="link"
                        type="button"
                      >
                        Sign In
                      </button>
                    </div>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`enroll-profile-with-password should show custom field level error message and custom global message on page load 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <main
      class="MuiBox-root emotion-1"
      data-commit="b9bbc0140703c3fbf0e2e58920362e70"
      data-se="auth-container main-container"
      data-version="0.0.0"
      dir="ltr"
      id="okta-sign-in"
      lang="en"
    >
      <div
        class="MuiScopedCssBaseline-root emotion-2"
      >
        <div
          class="MuiBox-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
              data-se="okta-sign-in-header auth-header "
            >
              <h1
                class="MuiTypography-root MuiTypography-h1 emotion-6"
                tabindex="-1"
              />
            </div>
            <div
              class="MuiBox-root emotion-7"
            >
              <form
                aria-live="polite"
                class="o-form MuiBox-root emotion-8"
                data-se="o-form"
                novalidate=""
              >
                <div
                  class="MuiBox-root emotion-9"
                >
                  <div
                    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-calloutError MuiAlert-callout emotion-10"
                    role="alert"
                  >
                    <div
                      class="MuiAlert-icon emotion-11"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-12"
                        fill="none"
                        focusable="false"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M9.879 1.707a3 3 0 0 1 4.242 0l8.172 8.172a3 3 0 0 1 0 4.242l-8.172 8.172a3 3 0 0 1-4.242 0L1.707 14.12a3 3 0 0 1 0-4.242L9.88 1.707ZM12 13a1 1 0 0 1-1-1V7h2v5a1 1 0 0 1-1 1Zm0 1.75a1.25 1.25 0 1 0 0 2.5 1.25 1.25 0 0 0 0-2.5Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiAlert-message emotion-13"
                    >
                      <span
                        class="MuiBox-root emotion-14"
                        translate="no"
                      >
                        error
                      </span>
                      <div
                        class="MuiBox-root emotion-1"
                      >
                        This is my custom global message
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-16"
                >
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <h2
                        class="MuiTypography-root MuiTypography-h4 emotion-19"
                        data-se="o-form-head"
                        tabindex="-1"
                      >
                        Sign up
                      </h2>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 emotion-22"
                        data-se="o-form-explain"
                        tabindex="-1"
                      >
                        Fields are required unless marked optional.
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-24"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-error MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-25"
                        data-shrink="false"
                        for="userProfile.lastName"
                        id="userProfile.lastName-label"
                      >
                        <span>
                          Last name
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-formControl emotion-26"
                        required="true"
                      >
                        <input
                          aria-describedby="userProfile.lastName-error"
                          aria-errormessage="userProfile.lastName-error"
                          aria-invalid="true"
                          aria-labelledby="userProfile.lastName-label"
                          autocomplete="family-name"
                          class="MuiInputBase-input emotion-27"
                          data-se="userProfile.lastName"
                          id="userProfile.lastName"
                          name="userProfile.lastName"
                          required=""
                          type="text"
                        />
                      </div>
                      <p
                        class="MuiFormHelperText-root Mui-error MuiFormHelperText-sizeMedium emotion-28"
                        id="userProfile.lastName-error"
                      >
                        <span
                          class="MuiBox-root emotion-14"
                        >
                          Error:
                        </span>
                        <div
                          class="MuiBox-root emotion-1"
                        >
                          Custom parseSchema error
                        </div>
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-24"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-25"
                        data-shrink="false"
                        for="userProfile.firstName"
                        id="userProfile.firstName-label"
                      >
                        <span>
                          First name
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-26"
                        required="true"
                      >
                        <input
                          aria-invalid="false"
                          aria-labelledby="userProfile.firstName-label"
                          autocomplete="given-name"
                          class="MuiInputBase-input emotion-27"
                          data-se="userProfile.firstName"
                          id="userProfile.firstName"
                          name="userProfile.firstName"
                          required=""
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-24"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-25"
                        data-shrink="false"
                        for="userProfile.email"
                        id="userProfile.email-label"
                      >
                        <span>
                          Email
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-26"
                        required="true"
                      >
                        <input
                          aria-invalid="false"
                          aria-labelledby="userProfile.email-label"
                          autocomplete="email"
                          class="MuiInputBase-input emotion-27"
                          data-se="userProfile.email"
                          id="userProfile.email"
                          inputmode="email"
                          name="userProfile.email"
                          required=""
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-24"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-25"
                        data-shrink="false"
                        for="userProfile.login"
                        id="userProfile.login-label"
                      >
                        <span>
                          Username
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-26"
                        required="true"
                      >
                        <input
                          aria-invalid="false"
                          aria-labelledby="userProfile.login-label"
                          class="MuiInputBase-input emotion-27"
                          data-se="userProfile.login"
                          id="userProfile.login"
                          name="userProfile.login"
                          required=""
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-47"
                      data-se="save"
                      tabindex="0"
                      type="submit"
                    >
                      Sign Up
                    </button>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <hr
                      class="MuiDivider-root MuiDivider-fullWidth emotion-49"
                      data-se="separation-line"
                    />
                  </div>
                  <div
                    class="MuiBox-root emotion-50"
                  >
                    <div
                      class="MuiBox-root emotion-51"
                    >
                      <div
                        class="MuiBox-root emotion-18"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 emotion-22"
                          data-se="haveaccount"
                          tabindex="-1"
                        >
                          Already have an account?
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-51"
                    >
                      <button
                        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-55"
                        data-se="back"
                        role="link"
                        type="button"
                      >
                        Sign In
                      </button>
                    </div>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`enroll-profile-with-password should show generic error message and prevent updated view rendering when failure is triggered in postSubmit callback 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <main
      class="MuiBox-root emotion-1"
      data-commit="b9bbc0140703c3fbf0e2e58920362e70"
      data-se="auth-container main-container"
      data-version="0.0.0"
      dir="ltr"
      id="okta-sign-in"
      lang="en"
    >
      <div
        class="MuiScopedCssBaseline-root emotion-2"
      >
        <div
          class="MuiBox-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
              data-se="okta-sign-in-header auth-header "
            >
              <h1
                class="MuiTypography-root MuiTypography-h1 emotion-6"
                tabindex="-1"
              />
            </div>
            <div
              class="MuiBox-root emotion-7"
            >
              <form
                aria-live="polite"
                class="o-form MuiBox-root emotion-8"
                data-se="o-form"
                novalidate=""
              >
                <div
                  class="MuiBox-root emotion-9"
                >
                  <div
                    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-calloutError MuiAlert-callout emotion-10"
                    role="alert"
                  >
                    <div
                      class="MuiAlert-icon emotion-11"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-12"
                        fill="none"
                        focusable="false"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M9.879 1.707a3 3 0 0 1 4.242 0l8.172 8.172a3 3 0 0 1 0 4.242l-8.172 8.172a3 3 0 0 1-4.242 0L1.707 14.12a3 3 0 0 1 0-4.242L9.88 1.707ZM12 13a1 1 0 0 1-1-1V7h2v5a1 1 0 0 1-1 1Zm0 1.75a1.25 1.25 0 1 0 0 2.5 1.25 1.25 0 0 0 0-2.5Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiAlert-message emotion-13"
                    >
                      <span
                        class="MuiBox-root emotion-14"
                        translate="no"
                      >
                        error
                      </span>
                      <div
                        class="MuiBox-root emotion-1"
                      >
                        We could not process your registration at this time. Please try again later.
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-16"
                >
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <h2
                        class="MuiTypography-root MuiTypography-h4 emotion-19"
                        data-se="o-form-head"
                        tabindex="-1"
                      >
                        Sign up
                      </h2>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 emotion-22"
                        data-se="o-form-explain"
                        tabindex="-1"
                      >
                        Fields are required unless marked optional.
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-24"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-25"
                        data-shrink="false"
                        for="userProfile.lastName"
                        id="userProfile.lastName-label"
                      >
                        <span>
                          Last name
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-26"
                        required="true"
                      >
                        <input
                          aria-invalid="false"
                          aria-labelledby="userProfile.lastName-label"
                          autocomplete="family-name"
                          class="MuiInputBase-input emotion-27"
                          data-se="userProfile.lastName"
                          id="userProfile.lastName"
                          name="userProfile.lastName"
                          required=""
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-24"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-25"
                        data-shrink="false"
                        for="userProfile.firstName"
                        id="userProfile.firstName-label"
                      >
                        <span>
                          First name
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-26"
                        required="true"
                      >
                        <input
                          aria-invalid="false"
                          aria-labelledby="userProfile.firstName-label"
                          autocomplete="given-name"
                          class="MuiInputBase-input emotion-27"
                          data-se="userProfile.firstName"
                          id="userProfile.firstName"
                          name="userProfile.firstName"
                          required=""
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-24"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-25"
                        data-shrink="false"
                        for="userProfile.email"
                        id="userProfile.email-label"
                      >
                        <span>
                          Email
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-26"
                        required="true"
                      >
                        <input
                          aria-invalid="false"
                          aria-labelledby="userProfile.email-label"
                          autocomplete="email"
                          class="MuiInputBase-input emotion-27"
                          data-se="userProfile.email"
                          id="userProfile.email"
                          inputmode="email"
                          name="userProfile.email"
                          required=""
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-24"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-25"
                        data-shrink="false"
                        for="userProfile.login"
                        id="userProfile.login-label"
                      >
                        <span>
                          Username
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-26"
                        required="true"
                      >
                        <input
                          aria-invalid="false"
                          aria-labelledby="userProfile.login-label"
                          class="MuiInputBase-input emotion-27"
                          data-se="userProfile.login"
                          id="userProfile.login"
                          name="userProfile.login"
                          required=""
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-44"
                      data-se="save"
                      tabindex="0"
                      type="submit"
                    >
                      Sign Up
                    </button>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <hr
                      class="MuiDivider-root MuiDivider-fullWidth emotion-46"
                      data-se="separation-line"
                    />
                  </div>
                  <div
                    class="MuiBox-root emotion-47"
                  >
                    <div
                      class="MuiBox-root emotion-48"
                    >
                      <div
                        class="MuiBox-root emotion-18"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 emotion-22"
                          data-se="haveaccount"
                          tabindex="-1"
                        >
                          Already have an account?
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-48"
                    >
                      <button
                        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-52"
                        data-se="back"
                        role="link"
                        type="button"
                      >
                        Sign In
                      </button>
                    </div>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`enroll-profile-with-password should show validation error messages on all fields when submitted without completing required fields 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <main
      class="MuiBox-root emotion-1"
      data-commit="b9bbc0140703c3fbf0e2e58920362e70"
      data-se="auth-container main-container"
      data-version="0.0.0"
      dir="ltr"
      id="okta-sign-in"
      lang="en"
    >
      <div
        class="MuiScopedCssBaseline-root emotion-2"
      >
        <div
          class="MuiBox-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
              data-se="okta-sign-in-header auth-header "
            >
              <h1
                class="MuiTypography-root MuiTypography-h1 emotion-6"
                tabindex="-1"
              />
            </div>
            <div
              class="MuiBox-root emotion-7"
            >
              <form
                aria-live="polite"
                class="o-form MuiBox-root emotion-8"
                data-se="o-form"
                novalidate=""
              >
                <div
                  class="MuiBox-root emotion-9"
                >
                  <div
                    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-calloutError MuiAlert-callout emotion-10"
                    role="alert"
                  >
                    <div
                      class="MuiAlert-icon emotion-11"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-12"
                        fill="none"
                        focusable="false"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M9.879 1.707a3 3 0 0 1 4.242 0l8.172 8.172a3 3 0 0 1 0 4.242l-8.172 8.172a3 3 0 0 1-4.242 0L1.707 14.12a3 3 0 0 1 0-4.242L9.88 1.707ZM12 13a1 1 0 0 1-1-1V7h2v5a1 1 0 0 1-1 1Zm0 1.75a1.25 1.25 0 1 0 0 2.5 1.25 1.25 0 0 0 0-2.5Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiAlert-message emotion-13"
                    >
                      <span
                        class="MuiBox-root emotion-14"
                        translate="no"
                      >
                        error
                      </span>
                      <div
                        class="MuiBox-root emotion-1"
                      >
                        We found some errors. Please review the form and make corrections.
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-16"
                >
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <h2
                        class="MuiTypography-root MuiTypography-h4 emotion-19"
                        data-se="o-form-head"
                        tabindex="-1"
                      >
                        Sign up
                      </h2>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 emotion-22"
                        data-se="o-form-explain"
                        tabindex="-1"
                      >
                        Fields are required unless marked optional.
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-24"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-error MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-25"
                        data-shrink="false"
                        for="userProfile.lastName"
                        id="userProfile.lastName-label"
                      >
                        <span>
                          Last name
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-formControl emotion-26"
                        required="true"
                      >
                        <input
                          aria-describedby="userProfile.lastName-error"
                          aria-errormessage="userProfile.lastName-error"
                          aria-invalid="true"
                          aria-labelledby="userProfile.lastName-label"
                          autocomplete="family-name"
                          class="MuiInputBase-input emotion-27"
                          data-se="userProfile.lastName"
                          id="userProfile.lastName"
                          name="userProfile.lastName"
                          required=""
                          type="text"
                        />
                      </div>
                      <p
                        class="MuiFormHelperText-root Mui-error MuiFormHelperText-sizeMedium emotion-28"
                        id="userProfile.lastName-error"
                      >
                        <span
                          class="MuiBox-root emotion-14"
                        >
                          Error:
                        </span>
                        <div
                          class="MuiBox-root emotion-1"
                        >
                          This field cannot be left blank
                        </div>
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-24"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-error MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-25"
                        data-shrink="false"
                        for="userProfile.firstName"
                        id="userProfile.firstName-label"
                      >
                        <span>
                          First name
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-formControl emotion-26"
                        required="true"
                      >
                        <input
                          aria-describedby="userProfile.firstName-error"
                          aria-errormessage="userProfile.firstName-error"
                          aria-invalid="true"
                          aria-labelledby="userProfile.firstName-label"
                          autocomplete="given-name"
                          class="MuiInputBase-input emotion-27"
                          data-se="userProfile.firstName"
                          id="userProfile.firstName"
                          name="userProfile.firstName"
                          required=""
                          type="text"
                        />
                      </div>
                      <p
                        class="MuiFormHelperText-root Mui-error MuiFormHelperText-sizeMedium emotion-28"
                        id="userProfile.firstName-error"
                      >
                        <span
                          class="MuiBox-root emotion-14"
                        >
                          Error:
                        </span>
                        <div
                          class="MuiBox-root emotion-1"
                        >
                          This field cannot be left blank
                        </div>
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-24"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-error MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-25"
                        data-shrink="false"
                        for="userProfile.email"
                        id="userProfile.email-label"
                      >
                        <span>
                          Email
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-formControl emotion-26"
                        required="true"
                      >
                        <input
                          aria-describedby="userProfile.email-error"
                          aria-errormessage="userProfile.email-error"
                          aria-invalid="true"
                          aria-labelledby="userProfile.email-label"
                          autocomplete="email"
                          class="MuiInputBase-input emotion-27"
                          data-se="userProfile.email"
                          id="userProfile.email"
                          inputmode="email"
                          name="userProfile.email"
                          required=""
                          type="text"
                        />
                      </div>
                      <p
                        class="MuiFormHelperText-root Mui-error MuiFormHelperText-sizeMedium emotion-28"
                        id="userProfile.email-error"
                      >
                        <span
                          class="MuiBox-root emotion-14"
                        >
                          Error:
                        </span>
                        <div
                          class="MuiBox-root emotion-1"
                        >
                          This field cannot be left blank
                        </div>
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-24"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-error MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-25"
                        data-shrink="false"
                        for="userProfile.login"
                        id="userProfile.login-label"
                      >
                        <span>
                          Username
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-formControl emotion-26"
                        required="true"
                      >
                        <input
                          aria-describedby="userProfile.login-error"
                          aria-errormessage="userProfile.login-error"
                          aria-invalid="true"
                          aria-labelledby="userProfile.login-label"
                          class="MuiInputBase-input emotion-27"
                          data-se="userProfile.login"
                          id="userProfile.login"
                          name="userProfile.login"
                          required=""
                          type="text"
                        />
                      </div>
                      <p
                        class="MuiFormHelperText-root Mui-error MuiFormHelperText-sizeMedium emotion-28"
                        id="userProfile.login-error"
                      >
                        <span
                          class="MuiBox-root emotion-14"
                        >
                          Error:
                        </span>
                        <div
                          class="MuiBox-root emotion-1"
                        >
                          This field cannot be left blank
                        </div>
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-24"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-error MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-25"
                        data-shrink="false"
                        for="userProfile.address"
                        id="userProfile.address-label"
                      >
                        <span>
                          Street Address
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-formControl emotion-26"
                        required="true"
                      >
                        <input
                          aria-describedby="userProfile.address-error"
                          aria-errormessage="userProfile.address-error"
                          aria-invalid="true"
                          aria-labelledby="userProfile.address-label"
                          class="MuiInputBase-input emotion-27"
                          data-se="userProfile.address"
                          id="userProfile.address"
                          name="userProfile.address"
                          required=""
                          type="text"
                        />
                      </div>
                      <p
                        class="MuiFormHelperText-root Mui-error MuiFormHelperText-sizeMedium emotion-28"
                        id="userProfile.address-error"
                      >
                        <span
                          class="MuiBox-root emotion-14"
                        >
                          Error:
                        </span>
                        <div
                          class="MuiBox-root emotion-1"
                        >
                          This field cannot be left blank
                        </div>
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-64"
                      data-se="save"
                      tabindex="0"
                      type="submit"
                    >
                      Sign Up
                    </button>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <hr
                      class="MuiDivider-root MuiDivider-fullWidth emotion-66"
                      data-se="separation-line"
                    />
                  </div>
                  <div
                    class="MuiBox-root emotion-67"
                  >
                    <div
                      class="MuiBox-root emotion-68"
                    >
                      <div
                        class="MuiBox-root emotion-18"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 emotion-22"
                          data-se="haveaccount"
                          tabindex="-1"
                        >
                          Already have an account?
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-68"
                    >
                      <button
                        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-72"
                        data-se="back"
                        role="link"
                        type="button"
                      >
                        Sign In
                      </button>
                    </div>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;
